# hermes-my-browser-extension

./: .gitignore  DEVELOPER.md  MANIFEST.in  README.md  README.zh-CN.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml  tools.py
bridge/: __init__.py  attachment_http.py  common.py  dotenv_local.py  hermes_agent_model.py  hermes_canonical_providers.py  hermes_model_catalog.py  hermes_provider_env.py  hermes_provider_models.py  http_app.py  server.py
bridge/adapters/: hermes_agent_model.py
bridge/features/: __init__.py
bridge/features/chrome_extension/: attachment_service.py  routes.py
bridge/features/cron/: output_service.py  routes.py  service.py
bridge/features/hermes_settings/: config_routes.py  main_provider_settings_service.py  (+9 more)
bridge/routes/: __init__.py  common.py  config_routes.py  cron_routes.py  memory_routes.py  misc_routes.py  model_routes.py  skills_routes.py
bridge/services/: __init__.py  attachment_service.py  cron_service.py  main_provider_settings_service.py  memory_service.py  model_catalog_service.py  model_config_service.py  provider_credentials_service.py  provider_models_service.py  skills_service.py
docs/: AGENT_INSTALL.md
extension/: .gitignore  agent-window.js  background.js  components.json  config.js  connection.js  handlers.js  icon.js  manifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  popup.html  popup.js  state.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
extension/patches/: property-information@7.1.0.patch
extension/src/: style.css
scripts/: bootstrap-hermes-python.sh
(+88 files in other folders)
